creusot/tests/should_fail/terminates/mutual_recursion_trait.stderr
error: Mutually recursive functions: when calling `<i32 as Foo>::foo`...
  --> mutual_recursion_trait.rs:12:5
   |
12 |     fn foo() {
   |     ^^^^^^^^
   |
note: then `<i32 as Foo>::foo` calls `bar`...
  --> mutual_recursion_trait.rs:13:9
   |
13 |         bar();
   |         ^^^^^
note: finally `bar` calls `<i32 as Foo>::foo`.
  --> mutual_recursion_trait.rs:19:5
   |
19 |     <i32 as Foo>::foo();
   |     ^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

